feat: portfolio v1.1.0 - accessibility, performance and deployment fixes
- Add React lazy loading with code splitting
- Enhance component accessibility with aria labels
- Configure ESLint + Prettier with automated scripts
- Add unit tests for critical components
- Implement Open Graph SEO improvements
- Update dependencies and documentation
- Fix build/test pipeline for production ready

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
@@ -7,8 +7,39 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Portfólio de Victor Alexandre Silva, Desenvolvedor Front-End"
+      content="Portfólio de Victor Alexandre Silva, Desenvolvedor Front-End especializado em React, Node.js e tecnologias web modernas."
     />
+    <meta
+      name="keywords"
+      content="Victor Alexandre Silva, desenvolvedor front-end, React, Node.js, portfólio, web development"
+    />
+    <meta name="author" content="Victor Alexandre Silva" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Victor Alexandre Silva - Desenvolvedor Front-End"
+    />
+    <meta
+      property="og:description"
+      content="Portfólio profissional de Victor Alexandre Silva, mostrando projetos em React, projetos pessoais e habilidades técnicas."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/logo512.png" />
+    <meta
+      property="og:url"
+      content="https://victor-silva-portfolio.vercel.app/"
+    />
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Victor Alexandre Silva - Desenvolvedor Front-End"
+    />
+    <meta
+      name="twitter:description"
+      content="Portfólio de Victor Alexandre Silva, com projetos inovadores em desenvolvimento web."
+    />
+    <meta name="twitter:image" content="%PUBLIC_URL%/logo512.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
